runFormatTest(import.meta, ['solidity-parse']);
runFormatTest(import.meta, ['solidity-parse'], { compiler: '0.8.0' });
runFormatTest(import.meta, ['slang-solidity'], { compiler: '0.7.0' });
